--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "devDependencies": {
     "bootstrap": "^3.3.6",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^2.13.4",
     "jquery": "^2.2.3",
     "pixi.js": "^3.0.11"
   },
   "dependencies": {
-    "uuid": "^2.0.2"
+    "uuid": "https://github.com/LiosK/UUID.js.git"
   }
 }
