--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "outDir": "./dist/",
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "sourceMap": true
   },
   "exclude": [
