--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "application-name",
   "version": "0.0.1",
-  "dependencies": {
-    "bootstrap": "^3.3.6",
+  "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.13.4",
+    "typescript": "^1.8.10"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.6",
     "jquery": "^2.2.3",
     "pixi.js": "^3.0.11",
     "UUID.js":"https://github.com/bo0liu/UUID.js/tarball/master"
