--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "module": "commonjs",
-    "target": "es6",
+    "module": "ES6",
+    "target": "ES6",
     "sourceMap": true
   },
   "exclude": [
